--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@atago0129/d3-v4-contextmenu",
-  "version": "1.1.0",
+  "name": "d3v4-contextmenu",
+  "version": "1.1.1",
   "description": "context menu with d3.js v4",
   "main": "dist/d3-v4-contextmenu.cjs.js",
   "jsnext:main": "dist/d3-v4-contextmenu.es.js",
@@ -10,19 +10,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/atago0129/d3-v4-contextmenu.git"
+    "url": "git+https://github.com/LaughingVzr/d3-v4-contextmenu.git"
   },
   "keywords": [
     "d3.js",
     "context-menu",
     "contextmenu"
   ],
-  "author": "atago0129",
+  "author": "laughing_vzr",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/atago0129/d3-v4-contextmenu/issues"
+    "url": "https://github.com/LaughingVzr/d3-v4-contextmenu/issues"
   },
-  "homepage": "https://github.com/atago0129/d3-v4-contextmenu#readme",
+  "homepage": "https://github.com/LaughingVzr/d3-v4-contextmenu#readme",
   "dependencies": {
     "d3": "^4.10.0"
   },
